<resources>
    <string name="app_name">Tetris</string>
    <string name="main_menu_title">Tetris</string>
    <string name="main_menu_play">Tap to play</string>
    <string name="icon_volume_up">&#xf028;</string>
    <string name="icon_volume_mute">&#xf6a9;</string>
    <string name="icon_cog">&#xf013;</string>
    <string name="icon_medal">&#xf5a2;</string>
    <string name="score">SCORE: %1$d</string>
    <string name="level">LEVEL: %1$d</string>
    <string name="icon_pause">&#xf04c;</string>
    <string name="icon_play">&#xf04b;</string>
    <string name="settings">Settings</string>
    <string name="next">NEXT</string>
    <string name="game_over">Game Over</string>
    <string name="game_over_play">Tap to play again</string>
    <string name="nick_name">Name</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="save">Save</string>
    <string name="player">Player</string>
    <string name="high_score">High Score</string>
    <string name="list_level">Level</string>
    <string name="list_score">Score</string>
</resources>
