<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorTextBlue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/TVSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/ralewayextrabold"
        android:text="@string/settings"
        android:textColor="@color/colorTextOrange"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ETPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nick_name"
        android:textColor="@color/colorTextOrange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVSettingsTitle" />

    <RadioGroup
        android:id="@+id/RGDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETPlayer">

        <RadioButton
            android:id="@+id/RB1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorTextOrange"
            android:checked="true"
            android:fontFamily="@font/ralewaymedium"
            android:text="@string/easy"
            android:textColor="@color/colorTextOrange"
            android:textColorLink="@color/colorTextOrange"
            tools:layout_editor_absoluteX="137dp"
            tools:layout_editor_absoluteY="284dp" />

        <RadioButton
            android:id="@+id/RB2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorTextOrange"
            android:fontFamily="@font/ralewaymedium"
            android:text="@string/medium"
            android:textColor="@color/colorTextOrange" />

        <RadioButton
            android:id="@+id/RB3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorTextOrange"
            android:fontFamily="@font/ralewaymedium"
            android:text="@string/hard"
            android:textColor="@color/colorTextOrange" />
    </RadioGroup>

    <Button
        android:id="@+id/BTSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RGDifficulty"
        app:layout_constraintVertical_bias="0.43" />

</android.support.constraint.ConstraintLayout>