<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LLScore"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTextBlue"
    android:orientation="vertical"
    tools:context=".HighScoreActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <TextView
            android:id="@+id/TVScore"
            android:layout_width="368dp"
            android:layout_height="89dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/ralewayextrabold"
            android:text="@string/high_score"
            android:textAlignment="center"
            android:textColor="@color/colorTextOrange"
            android:textSize="64sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.263" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/ralewaybold"
            android:text="@string/player"
            android:textColor="@color/colorTextOrange"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.356"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TVScore"
            app:layout_constraintVertical_bias="0.513" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/ralewaybold"
            android:text="@string/list_level"
            android:textColor="@color/colorTextOrange"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/TVScore"
            app:layout_constraintVertical_bias="0.513" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/ralewaybold"
            android:text="@string/list_score"
            android:textColor="@color/colorTextOrange"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TVScore"
            app:layout_constraintVertical_bias="0.513" />
    </android.support.constraint.ConstraintLayout>

    <ListView
        android:id="@+id/LVScore"
        android:layout_width="match_parent"
        android:layout_height="426dp">

    </ListView>

</LinearLayout>